# medicine-verifier-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  database_service.py  ocr_service.py  pharma_service.py  verification_service.py
app/utils/: __init__.py  image_utils.py  text_utils.py
tests/: __init__.py  test_api.py  test_services.py  test_utils.py
